# artifacts/api-server/src/routes/index.ts
@@ -5,6 +5,7 @@ import bookingsRouter from "./bookings";
 import calendarRouter from "./calendar";
 import exportRouter from "./exportRoutes";
 import usersRouter from "./users";
+import timeTrackingRouter from "./timeTracking";
 
 const router: IRouter = Router();
 
@@ -14,5 +15,6 @@ router.use(bookingsRouter);
 router.use(calendarRouter);
 router.use(exportRouter);
 router.use(usersRouter);
+router.use(timeTrackingRouter);
 
 export default router;
